# hdldepends

./: LICENSE  README.md  pyproject.toml
src/hdldepends/: hdldepends.py  hdldepends.vhd
test/vhdl/: .gitignore  axis_data_to_chdr.sv  bd_hdl.vhd  counter.v  del.vhd  del2.vhd  del21.vhd  del211.vhd  del3.vhd  del3_2.vhd  del4.vhd  del_ipkg.vhd  del_pkg.vhd  design_1.bd  design_2.bd  extern_deps.txt  fir_compiler_0.mif  fir_compiler_0.xci  fir_compiler_0_coefs.coe  fir_compiler_0_sim_netlist.vhdl  fw_files.txt  fw_files1.txt  fw_files2.txt  hdl_deps_common.toml  hdl_deps_led_controller_tb.toml  hdl_deps_prj.json  hdl_deps_prj.toml  hdl_deps_sub1.toml  hdl_deps_sub2.toml  led_controller.vhd  led_controller_tb.vhd  misc_package.sv  test.sh  test_led_controller_tb.sh
test/vhdl/vivado_2022.2/: axi_bram_ctrl_0.xci
test/vhdl/vivado_2024.2/: axi_bram_ctrl_0.xci
