[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hdldepends"
version = "0.1.3"
authors = [
  { name="Pev Hall", email="pev.hall@gmail.com" },
]
description = "A small package to find HDL file dependencies"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "tomli; python_version<'3.10'"
]

[project.scripts]
hdldepends = "hdldepends.hdldepends:hdldepends"

[project.urls]
Homepage = "https://github.com/pevhall/hdldepends"
Issues = "https://github.com/pevhall/hdldepends/issues"
